# arcade-manager

./: .gitignore  README.md  pyproject.toml
src/: ArcadeTools.pyt
src/arcade_manager/: __init__.py  __main__.py  parser.py
src/arcade_manager/toolbox/: ArcadeTools.pyt
