[project]
name = "arcade-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hayden Welch", email = "hwelch@finelines-engineering.com" }
]
requires-python = ">=3.12"
dependencies = [
    'arcpy'
]

[project.scripts]
arcade-editor = "arcade_editor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
